@@ -1,3 +1,8 @@
+    matplotlib.image.imread now no longer always returns RGBA -- if
+    the image is luminance or RGB, it will return a MxN or MxNx3 array
+    if possible.  Also uint8 is no longer always forced to float.
+
+
 0.91.2 Released
 
     For csv2rec, checkrows=0 is the new default indicating all rows
